third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/key/empty.stderr
TOML parse error at line 1, column 2
  |
1 |  = 1
  |  ^
invalid key
